# ChartAnalyzer

./: .gitignore  MANUAL_VERIFICATION.md  README.md  chartanalyzer.db  docker-compose.yml  start.bat  start.sh  test_api.py  test_e2e_annotations.py  test_notes_db_fix.py
.claude/: settings.local.json
backend/: chartanalyzer.db  pyproject.toml  requirements.txt  test_import.py
backend/app/: __init__.py  config.py  database.py  db_init.py  main.py
backend/app/analysis/: __init__.py  indicators.py  patterns.py  support_resistance.py  trend_analysis.py  volume_analysis.py
backend/app/api/routes/: analysis.py  annotations.py  notes.py  scanner.py  stocks.py  watchlist.py
backend/app/core/: __init__.py  data_provider.py  kite_provider.py  yfinance_provider.py
backend/app/models/: __init__.py  analysis.py  annotation.py  fundamental.py  scanner_presets.py  stock.py  trade.py
backend/app/services/: analyzer.py  fundamental_scorer.py  scanner.py
backend/app/strategies/: __init__.py  base.py  composite.py  lynch.py  minervini.py  weinstein.py
backend/app/utils/: constants.py  helpers.py
backend/tests/: verify_cache_behavior.py  verify_cache_static.py  verify_scanner_filters.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/Analysis/: AnalysisSummary.tsx  FundamentalMetrics.tsx  (+5 more)
frontend/src/hooks/: useAnnotations.ts
frontend/src/services/: api.ts
frontend/src/store/: annotationStore.ts  index.ts
frontend/src/types/: index.ts
frontend/src/utils/: export.ts
(+16 files in other folders)
